export class User {
    name: string;
    id: number;
}
